tests/invalid/Type_Invalid_4.whiley
type Point is {
    Point f
}

function toString(int p) -> Point:
    return null

